Typo and grammar fixes

--- a/TutorialAndDevGuide/Tutorial/Domain.tex
+++ b/TutorialAndDevGuide/Tutorial/Domain.tex
@@ -7,17 +7,17 @@ with the sole purpose of assuring that the target program behaves in accordance 
 pre-established specification. Copilot is a language for writing such specifications.
 
 A reactive system is a system that responds continuously to its environment.
-All data to and from a reactive system is communicated progressively during
-execution. Reactive systems differ from transformational systems which transforms
+All data to and from a reactive system are communicated progressively during
+execution. Reactive systems differ from transformational systems which transform
 data in a single pass and then terminate, as for example compilers and numerical
 computation software.
 
 A hard real-time system is a system that has a statically bounded execution time
-and memmory usage.  Typically, hard real-time systems are used in
+and memory usage.  Typically, hard real-time systems are used in
 mission-critical software, such as avionics, medical equipment, and nuclear power
 plants; hence, occasional dropouts in the response time or crashes are not
 tolerated.
 
 A distributed system is a system which is layered out on multiple pieces of hardware.
-The distributed systems we consider are all synchronized, i.e., each component agree on
+The distributed systems we consider are all synchronized, i.e., all components agree on
 a shared global clock.
