--- a/TutorialAndDevGuide/Tutorial/tutorial.tex
+++ b/TutorialAndDevGuide/Tutorial/tutorial.tex
@@ -7,6 +7,7 @@
 
 %\newcommand{\todo}[1]{{\bf \Huge !!!!! #1 !!!!!}}
 
+\usepackage{booktabs}
 \usepackage[usenames,dvipsnames]{xcolor}
 \usepackage[textsize=footnotesize]{todonotes}
 %\usepackage[british]{babel}
