--- a/LPick/MTL/slides.tex
+++ b/LPick/MTL/slides.tex
@@ -48,7 +48,7 @@
 \begin{frame}[fragile]
 \frametitle{Monitoring Properties Involving Real-Time with Copilot}
 \begin{itemize}
-\item Given a knowledge of a constant sampling rate for externs of a monitor,
+\item Given knowledge of a constant sampling rate for externs of a monitor,
 real-time properties can be monitored, since each iteration would
 correspond to a known, constant amount of time elapsing.
   \begin{itemize}
